platform/k8s/base/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nutrition-webapp
  labels:
    app.kubernetes.io/name: webapp
    app.kubernetes.io/instance: nutrition
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webapp
      app.kubernetes.io/instance: nutrition
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webapp
        app.kubernetes.io/instance: nutrition
    spec:
      containers:
        - name: webapp
          image: luismunozvillarreal/nutrition-webapp:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 3000
          startupProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            failureThreshold: 60
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: nutrition-webapp
  labels:
    app.kubernetes.io/name: webapp
    app.kubernetes.io/instance: nutrition
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: webapp
    app.kubernetes.io/instance: nutrition
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nutrition-webapp
  labels:
    app.kubernetes.io/name: webapp
    app.kubernetes.io/instance: nutrition
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.tls.domains.0.main: nutrition.localhost
spec:
  rules:
    - host: nutrition.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nutrition-webapp
                port:
                  number: 80
